<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.prieto.william.libano.Main2Activity"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle.grande"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Información"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.5"
                android:layout_height="0dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/Nombre"
                           />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                       >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/Profesion"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/Edad"
                           />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/Nacionalidad"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/correo"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            style="@style/textViewStyle.peque"
                            android:text="@string/Disenador"
                            />

                    </LinearLayout>

                </LinearLayout>





            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
