<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prieto.william.libano.Main4Activity"
    android:orientation="vertical"
    >

    <TextView
        style="@style/textViewStyle.grande"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Bares"
        android:textSize="35dp"
        android:gravity="center"
        android:layout_weight="1.9" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"    >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/rggrupob1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="La negra tomasa"
                android:textSize="25dp"
                android:id="@+id/Rbtomasa"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Pent House"
                android:textSize="25dp"
                android:id="@+id/Rbcoco" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Palo de angel"
                android:textSize="25dp"
                android:id="@+id/Rbpalo"/>

        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/bar1"
                    android:id="@+id/ib1"
                    android:visibility="invisible"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/bar2"
                    android:id="@+id/ib2"
                    android:visibility="invisible"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/bar3"
                    android:id="@+id/ib3"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/desbares1"
                    android:id="@+id/desb1"/>
                <TextView
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/desbares2"
                    android:id="@+id/desb2"/>
                <TextView
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/desbares3"
                    android:id="@+id/desb3"/>
            </RelativeLayout>
        </LinearLayout>



    </LinearLayout>



</LinearLayout>