<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.prieto.william.libano.Main3Activity"
        android:orientation="vertical"
        >

        <TextView
            style="@style/textViewStyle.grande"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Hoteles"
            android:textSize="35dp"
            android:gravity="center"
            android:layout_weight="1.9" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"    >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/rggrupoh1">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="PANTAGORA"
                    android:textSize="25dp"
                    android:id="@+id/Rbpantagora"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="CONTINENTAL"
                    android:textSize="25dp"
                    android:id="@+id/Rbcontinental" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="CALLE REAL"
                    android:textSize="25dp"
                    android:id="@+id/Rbcalle"/>

            </RadioGroup>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/hotel11"
                        android:visibility="invisible"
                        android:id="@+id/ih1"
                        />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/hotel2"
                        android:visibility="invisible"
                        android:id="@+id/ih2"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/hotel3"
                        android:visibility="invisible"
                        android:id="@+id/ih3"/>


                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/deshotel1"
                        android:visibility="invisible"
                        android:id="@+id/desh1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/deshotel2"
                        android:visibility="invisible"
                        android:id="@+id/desh2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible"
                        android:text="@string/deshotel3"
                        android:id="@+id/desh3"/>
                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>



    </LinearLayout>
</ScrollView>